Refactor: Update app name and enhance documentation
- Changed app name from "wakeduino_remote" to "WakeDuino" across the project.
- Improved README with more details about WakeDuino and the client application.
- Added msix package for Windows builds.
- Updated CMakeLists.txt for Windows to support older Flutter tool versions.
- Removed unused "Key" setting from the settings screen.
- Removed explicit `primary` color from `TextButton` styles in `insert_screen.dart` as it's deprecated.
- Hid the debug banner in `app_widget.dart`.
- Updated Windows runner files with the new app name and company information.

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "it.banorz" "\0"
-            VALUE "FileDescription", "wakeduino_remote" "\0"
+            VALUE "CompanyName", "banorz" "\0"
+            VALUE "FileDescription", "WakeDuino" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "wakeduino_remote" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 it.banorz. All rights reserved." "\0"
+            VALUE "InternalName", "WakeDuino" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 banorz. All rights reserved." "\0"
             VALUE "OriginalFilename", "wakeduino_remote.exe" "\0"
-            VALUE "ProductName", "wakeduino_remote" "\0"
+            VALUE "ProductName", "WakeDuino" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
